crates/pipeline-tests/tests/snapshots/runner__tests__snippets__invalid__statements__branch.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/invalid/statements/branch.qasm
expect-lex: Ok
--- source ---

if true x $0;
if false { x $0; }
if (myvar += 1) { x $0; }
if (int[8] myvar = 1) { x $0; }
if (true);
if (true) else x $0;
if (true) else (false) x $0;
if (reset $0) { x $1; }
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Ident "if" @1..3
[2] Whitespace " " @3..4
[3] Ident "true" @4..8
[4] Whitespace " " @8..9
[5] Ident "x" @9..10
[6] Whitespace " " @10..11
[7] HardwareIdent "$0" @11..13
[8] Semi ";" @13..14
[9] Whitespace "\n" @14..15
[10] Ident "if" @15..17
[11] Whitespace " " @17..18
[12] Ident "false" @18..23
[13] Whitespace " " @23..24
[14] OpenBrace "{" @24..25
[15] Whitespace " " @25..26
[16] Ident "x" @26..27
[17] Whitespace " " @27..28
[18] HardwareIdent "$0" @28..30
[19] Semi ";" @30..31
[20] Whitespace " " @31..32
[21] CloseBrace "}" @32..33
[22] Whitespace "\n" @33..34
[23] Ident "if" @34..36
[24] Whitespace " " @36..37
[25] OpenParen "(" @37..38
[26] Ident "myvar" @38..43
[27] Whitespace " " @43..44
[28] Plus "+" @44..45
[29] Eq "=" @45..46
[30] Whitespace " " @46..47
[31] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @47..48
[32] CloseParen ")" @48..49
[33] Whitespace " " @49..50
[34] OpenBrace "{" @50..51
[35] Whitespace " " @51..52
[36] Ident "x" @52..53
[37] Whitespace " " @53..54
[38] HardwareIdent "$0" @54..56
[39] Semi ";" @56..57
[40] Whitespace " " @57..58
[41] CloseBrace "}" @58..59
[42] Whitespace "\n" @59..60
[43] Ident "if" @60..62
[44] Whitespace " " @62..63
[45] OpenParen "(" @63..64
[46] Ident "int" @64..67
[47] OpenBracket "[" @67..68
[48] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @68..69
[49] CloseBracket "]" @69..70
[50] Whitespace " " @70..71
[51] Ident "myvar" @71..76
[52] Whitespace " " @76..77
[53] Eq "=" @77..78
[54] Whitespace " " @78..79
[55] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @79..80
[56] CloseParen ")" @80..81
[57] Whitespace " " @81..82
[58] OpenBrace "{" @82..83
[59] Whitespace " " @83..84
[60] Ident "x" @84..85
[61] Whitespace " " @85..86
[62] HardwareIdent "$0" @86..88
[63] Semi ";" @88..89
[64] Whitespace " " @89..90
[65] CloseBrace "}" @90..91
[66] Whitespace "\n" @91..92
[67] Ident "if" @92..94
[68] Whitespace " " @94..95
[69] OpenParen "(" @95..96
[70] Ident "true" @96..100
[71] CloseParen ")" @100..101
[72] Semi ";" @101..102
[73] Whitespace "\n" @102..103
[74] Ident "if" @103..105
[75] Whitespace " " @105..106
[76] OpenParen "(" @106..107
[77] Ident "true" @107..111
[78] CloseParen ")" @111..112
[79] Whitespace " " @112..113
[80] Ident "else" @113..117
[81] Whitespace " " @117..118
[82] Ident "x" @118..119
[83] Whitespace " " @119..120
[84] HardwareIdent "$0" @120..122
[85] Semi ";" @122..123
[86] Whitespace "\n" @123..124
[87] Ident "if" @124..126
[88] Whitespace " " @126..127
[89] OpenParen "(" @127..128
[90] Ident "true" @128..132
[91] CloseParen ")" @132..133
[92] Whitespace " " @133..134
[93] Ident "else" @134..138
[94] Whitespace " " @138..139
[95] OpenParen "(" @139..140
[96] Ident "false" @140..145
[97] CloseParen ")" @145..146
[98] Whitespace " " @146..147
[99] Ident "x" @147..148
[100] Whitespace " " @148..149
[101] HardwareIdent "$0" @149..151
[102] Semi ";" @151..152
[103] Whitespace "\n" @152..153
[104] Ident "if" @153..155
[105] Whitespace " " @155..156
[106] OpenParen "(" @156..157
[107] Ident "reset" @157..162
[108] Whitespace " " @162..163
[109] HardwareIdent "$0" @163..165
[110] CloseParen ")" @165..166
[111] Whitespace " " @166..167
[112] OpenBrace "{" @167..168
[113] Whitespace " " @168..169
[114] Ident "x" @169..170
[115] Whitespace " " @170..171
[116] HardwareIdent "$1" @171..173
[117] Semi ";" @173..174
[118] Whitespace " " @174..175
[119] CloseBrace "}" @175..176
[120] Whitespace "\n" @176..177
