crates/pipeline-tests/tests/snapshots/runner__tests__snippets__invalid__statements__calibration.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/invalid/statements/calibration.qasm
expect-lex: Ok
--- source ---

defcalgrammar "openpulse" defcalgrammar "openpulse";
defcalgrammar 3;
defcal x $0 -> int[8] -> int[8] {}
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Ident "defcalgrammar" @1..14
[2] Whitespace " " @14..15
[3] Literal { kind: Str { terminated: true }, suffix_start: 11 } ""openpulse"" @15..26
[4] Whitespace " " @26..27
[5] Ident "defcalgrammar" @27..40
[6] Whitespace " " @40..41
[7] Literal { kind: Str { terminated: true }, suffix_start: 11 } ""openpulse"" @41..52
[8] Semi ";" @52..53
[9] Whitespace "\n" @53..54
[10] Ident "defcalgrammar" @54..67
[11] Whitespace " " @67..68
[12] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @68..69
[13] Semi ";" @69..70
[14] Whitespace "\n" @70..71
[15] Ident "defcal" @71..77
[16] Whitespace " " @77..78
[17] Ident "x" @78..79
[18] Whitespace " " @79..80
[19] HardwareIdent "$0" @80..82
[20] Whitespace " " @82..83
[21] Minus "-" @83..84
[22] Gt ">" @84..85
[23] Whitespace " " @85..86
[24] Ident "int" @86..89
[25] OpenBracket "[" @89..90
[26] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @90..91
[27] CloseBracket "]" @91..92
[28] Whitespace " " @92..93
[29] Minus "-" @93..94
[30] Gt ">" @94..95
[31] Whitespace " " @95..96
[32] Ident "int" @96..99
[33] OpenBracket "[" @99..100
[34] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @100..101
[35] CloseBracket "]" @101..102
[36] Whitespace " " @102..103
[37] OpenBrace "{" @103..104
[38] CloseBrace "}" @104..105
[39] Whitespace "\n" @105..106
