crates/pipeline-tests/tests/snapshots/runner__tests__snippets__invalid__statements__calibration.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/invalid/statements/calibration.qasm
expect-sema: Skip
--- sema ---
ok: true
panicked: false
errors: 0
--- asg ---
(no asg)
