crates/pipeline-tests/tests/snapshots/runner__tests__snippets__invalid__statements__const.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/invalid/statements/const.qasm
expect-lex: Ok
--- source ---

const myvar;
const myvar = ;
const myvar = 8.0;
input const myvar = 8;
output const myvar = 8;
const input myvar = 8;
const output myvar = 8;
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Ident "const" @1..6
[2] Whitespace " " @6..7
[3] Ident "myvar" @7..12
[4] Semi ";" @12..13
[5] Whitespace "\n" @13..14
[6] Ident "const" @14..19
[7] Whitespace " " @19..20
[8] Ident "myvar" @20..25
[9] Whitespace " " @25..26
[10] Eq "=" @26..27
[11] Whitespace " " @27..28
[12] Semi ";" @28..29
[13] Whitespace "\n" @29..30
[14] Ident "const" @30..35
[15] Whitespace " " @35..36
[16] Ident "myvar" @36..41
[17] Whitespace " " @41..42
[18] Eq "=" @42..43
[19] Whitespace " " @43..44
[20] Literal { kind: Float { base: Decimal, empty_exponent: false }, suffix_start: 3 } "8.0" @44..47
[21] Semi ";" @47..48
[22] Whitespace "\n" @48..49
[23] Ident "input" @49..54
[24] Whitespace " " @54..55
[25] Ident "const" @55..60
[26] Whitespace " " @60..61
[27] Ident "myvar" @61..66
[28] Whitespace " " @66..67
[29] Eq "=" @67..68
[30] Whitespace " " @68..69
[31] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @69..70
[32] Semi ";" @70..71
[33] Whitespace "\n" @71..72
[34] Ident "output" @72..78
[35] Whitespace " " @78..79
[36] Ident "const" @79..84
[37] Whitespace " " @84..85
[38] Ident "myvar" @85..90
[39] Whitespace " " @90..91
[40] Eq "=" @91..92
[41] Whitespace " " @92..93
[42] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @93..94
[43] Semi ";" @94..95
[44] Whitespace "\n" @95..96
[45] Ident "const" @96..101
[46] Whitespace " " @101..102
[47] Ident "input" @102..107
[48] Whitespace " " @107..108
[49] Ident "myvar" @108..113
[50] Whitespace " " @113..114
[51] Eq "=" @114..115
[52] Whitespace " " @115..116
[53] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @116..117
[54] Semi ";" @117..118
[55] Whitespace "\n" @118..119
[56] Ident "const" @119..124
[57] Whitespace " " @124..125
[58] Ident "output" @125..131
[59] Whitespace " " @131..132
[60] Ident "myvar" @132..137
[61] Whitespace " " @137..138
[62] Eq "=" @138..139
[63] Whitespace " " @139..140
[64] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @140..141
[65] Semi ";" @141..142
[66] Whitespace "\n" @142..143
