crates/pipeline-tests/tests/snapshots/runner__tests__snippets__invalid__statements__gate_applications.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/invalid/statements/gate_applications.qasm
expect-lex: Ok
--- source ---

U (1)(2) $0;
notmodifier @ x $0;
pow @ x $0;
pow(2, 3) @ x $0;
ctrl(2, 3) @ x $0, $1;
negctrl(2, 3) @ x $0, $1;
inv(1) @ ctrl @ x $0, $1;

// Global phase is defined in the grammar to be the last modifier.
gphase(pi) @ ctrl @ x $0, $1;
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Ident "U" @1..2
[2] Whitespace " " @2..3
[3] OpenParen "(" @3..4
[4] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @4..5
[5] CloseParen ")" @5..6
[6] OpenParen "(" @6..7
[7] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @7..8
[8] CloseParen ")" @8..9
[9] Whitespace " " @9..10
[10] HardwareIdent "$0" @10..12
[11] Semi ";" @12..13
[12] Whitespace "\n" @13..14
[13] Ident "notmodifier" @14..25
[14] Whitespace " " @25..26
[15] At "@" @26..27
[16] Whitespace " " @27..28
[17] Ident "x" @28..29
[18] Whitespace " " @29..30
[19] HardwareIdent "$0" @30..32
[20] Semi ";" @32..33
[21] Whitespace "\n" @33..34
[22] Ident "pow" @34..37
[23] Whitespace " " @37..38
[24] At "@" @38..39
[25] Whitespace " " @39..40
[26] Ident "x" @40..41
[27] Whitespace " " @41..42
[28] HardwareIdent "$0" @42..44
[29] Semi ";" @44..45
[30] Whitespace "\n" @45..46
[31] Ident "pow" @46..49
[32] OpenParen "(" @49..50
[33] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @50..51
[34] Comma "," @51..52
[35] Whitespace " " @52..53
[36] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @53..54
[37] CloseParen ")" @54..55
[38] Whitespace " " @55..56
[39] At "@" @56..57
[40] Whitespace " " @57..58
[41] Ident "x" @58..59
[42] Whitespace " " @59..60
[43] HardwareIdent "$0" @60..62
[44] Semi ";" @62..63
[45] Whitespace "\n" @63..64
[46] Ident "ctrl" @64..68
[47] OpenParen "(" @68..69
[48] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @69..70
[49] Comma "," @70..71
[50] Whitespace " " @71..72
[51] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @72..73
[52] CloseParen ")" @73..74
[53] Whitespace " " @74..75
[54] At "@" @75..76
[55] Whitespace " " @76..77
[56] Ident "x" @77..78
[57] Whitespace " " @78..79
[58] HardwareIdent "$0" @79..81
[59] Comma "," @81..82
[60] Whitespace " " @82..83
[61] HardwareIdent "$1" @83..85
[62] Semi ";" @85..86
[63] Whitespace "\n" @86..87
[64] Ident "negctrl" @87..94
[65] OpenParen "(" @94..95
[66] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @95..96
[67] Comma "," @96..97
[68] Whitespace " " @97..98
[69] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @98..99
[70] CloseParen ")" @99..100
[71] Whitespace " " @100..101
[72] At "@" @101..102
[73] Whitespace " " @102..103
[74] Ident "x" @103..104
[75] Whitespace " " @104..105
[76] HardwareIdent "$0" @105..107
[77] Comma "," @107..108
[78] Whitespace " " @108..109
[79] HardwareIdent "$1" @109..111
[80] Semi ";" @111..112
[81] Whitespace "\n" @112..113
[82] Ident "inv" @113..116
[83] OpenParen "(" @116..117
[84] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @117..118
[85] CloseParen ")" @118..119
[86] Whitespace " " @119..120
[87] At "@" @120..121
[88] Whitespace " " @121..122
[89] Ident "ctrl" @122..126
[90] Whitespace " " @126..127
[91] At "@" @127..128
[92] Whitespace " " @128..129
[93] Ident "x" @129..130
[94] Whitespace " " @130..131
[95] HardwareIdent "$0" @131..133
[96] Comma "," @133..134
[97] Whitespace " " @134..135
[98] HardwareIdent "$1" @135..137
[99] Semi ";" @137..138
[100] Whitespace "\n\n" @138..140
[101] LineComment "// Global phase is defined in the grammar to be the last modifier." @140..206
[102] Whitespace "\n" @206..207
[103] Ident "gphase" @207..213
[104] OpenParen "(" @213..214
[105] Ident "pi" @214..216
[106] CloseParen ")" @216..217
[107] Whitespace " " @217..218
[108] At "@" @218..219
[109] Whitespace " " @219..220
[110] Ident "ctrl" @220..224
[111] Whitespace " " @224..225
[112] At "@" @225..226
[113] Whitespace " " @226..227
[114] Ident "x" @227..228
[115] Whitespace " " @228..229
[116] HardwareIdent "$0" @229..231
[117] Comma "," @231..232
[118] Whitespace " " @232..233
[119] HardwareIdent "$1" @233..235
[120] Semi ";" @235..236
[121] Whitespace "\n" @236..237
