crates/pipeline-tests/tests/snapshots/runner__tests__snippets__invalid__statements__headers.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/invalid/statements/headers.qasm
expect-lex: Diag
--- source ---
// lex: diag
// parse: diag
// sema: skip

OPENQASM int;
OPENQASM 'hello, world';
OPENQASM 3 3;
OPENQASM 3.x;
include 3;
include include;
include def;
include "hello;
--- lexer ---
ok: false
errors: 1
[0] LineComment "// lex: diag" @0..12
[1] Whitespace "\n" @12..13
[2] LineComment "// parse: diag" @13..27
[3] Whitespace "\n" @27..28
[4] LineComment "// sema: skip" @28..41
[5] Whitespace "\n\n" @41..43
[6] Ident "OPENQASM" @43..51
[7] Whitespace " " @51..52
[8] Ident "int" @52..55
[9] Semi ";" @55..56
[10] Whitespace "\n" @56..57
[11] Ident "OPENQASM" @57..65
[12] Whitespace " " @65..66
[13] Literal { kind: Str { terminated: true }, suffix_start: 14 } "'hello, world'" @66..80
[14] Semi ";" @80..81
[15] Whitespace "\n" @81..82
[16] Ident "OPENQASM" @82..90
[17] Whitespace " " @90..91
[18] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @91..92
[19] Whitespace " " @92..93
[20] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @93..94
[21] Semi ";" @94..95
[22] Whitespace "\n" @95..96
[23] Ident "OPENQASM" @96..104
[24] Whitespace " " @104..105
[25] Literal { kind: Float { base: Decimal, empty_exponent: false }, suffix_start: 2 } "3.x" @105..108
[26] Semi ";" @108..109
[27] Whitespace "\n" @109..110
[28] Ident "include" @110..117
[29] Whitespace " " @117..118
[30] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @118..119
[31] Semi ";" @119..120
[32] Whitespace "\n" @120..121
[33] Ident "include" @121..128
[34] Whitespace " " @128..129
[35] Ident "include" @129..136
[36] Semi ";" @136..137
[37] Whitespace "\n" @137..138
[38] Ident "include" @138..145
[39] Whitespace " " @145..146
[40] Ident "def" @146..149
[41] Semi ";" @149..150
[42] Whitespace "\n" @150..151
[43] Ident "include" @151..158
[44] Whitespace " " @158..159
[45] Literal { kind: Str { terminated: false }, suffix_start: 8 } ""hello;\n" @159..167
